--- a/styles/_font.scss
+++ b/styles/_font.scss
@@ -26,6 +26,10 @@ body{
     font-size: 48px;
 }
 
+.fw-bold{
+    font-weight: bold;
+}
+
 .lh70{
     line-height: 70px;
 }
@@ -33,3 +37,6 @@ body{
 .fcG{
     color: $colorG;
 }
+
+
+
