--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -35,19 +35,27 @@
         flex-direction: column;
         align-items: center;
         width: 24%;
-        border-radius: 50px;
+        border-radius: 12px;
+        box-shadow: 0px 2px 10px #000014;
     }
 
     &Img{
-        width: 260px;
+        width: 100%;
+        border-top-left-radius: 12px;
+        border-top-right-radius: 12px;
     }
 
     &Title{
         color:$colorG;
+        margin: 16px 0px;
     }
 
     &Content{
         color:$colorB;
+        padding-left: 16px;
+        padding-right: 16px;
+        margin-bottom: 48px;
+        text-align: center;
     }
 
 }
