--- a/styles/main.css
+++ b/styles/main.css
@@ -152,19 +152,28 @@ body {
       -ms-flex-align: center;
           align-items: center;
   width: 24%;
-  border-radius: 50px;
+  border-radius: 12px;
+  -webkit-box-shadow: 0px 2px 10px #000014;
+          box-shadow: 0px 2px 10px #000014;
 }
 
 .cusmersCardImg {
-  width: 260px;
+  width: 100%;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
 }
 
 .cusmersCardTitle {
   color: #56C4C5;
+  margin: 16px 0px;
 }
 
 .cusmersCardContent {
   color: #221E1F;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-bottom: 48px;
+  text-align: center;
 }
 
 header {
@@ -272,6 +281,7 @@ footer {
 .cusmers {
   width: 100%;
   margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .cusmersTitle {
@@ -282,6 +292,7 @@ footer {
 .cusmersContent {
   color: #221E1F;
   text-align: center;
+  margin: 16px 0px 48px 0px;
 }
 
 .CTA {
