--- a/styles/_font.scss
+++ b/styles/_font.scss
@@ -30,6 +30,18 @@ body{
     font-weight: bold;
 }
 
+.lh24{
+    line-height: 24px;
+}
+
+.lh26{
+    line-height: 26px;
+}
+
+.lh46{
+    line-height: 46px;
+}
+
 .lh70{
     line-height: 70px;
 }
