--- a/styles/main.css
+++ b/styles/main.css
@@ -84,6 +84,18 @@ body {
   font-weight: bold;
 }
 
+.lh24 {
+  line-height: 24px;
+}
+
+.lh26 {
+  line-height: 26px;
+}
+
+.lh46 {
+  line-height: 46px;
+}
+
 .lh70 {
   line-height: 70px;
 }
@@ -174,6 +186,58 @@ body {
   padding-right: 16px;
   margin-bottom: 48px;
   text-align: center;
+}
+
+.functionCard {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.functionCard li {
+  width: 41%;
+  margin-bottom: 28px;
+  margin-right: 47px;
+  border-radius: 12px;
+  -webkit-box-shadow: 0px 2px 10px #000014;
+          box-shadow: 0px 2px 10px #000014;
+}
+
+.functionCardImg {
+  width: 51px;
+}
+
+.functionCardImgBg {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 86px;
+  height: 86px;
+  background-color: #fff;
+  border-radius: 50%;
+  -webkit-box-shadow: 0px 2px 10px #000014;
+          box-shadow: 0px 2px 10px #000014;
+  margin: 32px 0px 24px 32px;
+}
+
+.functionCardTitle {
+  line-height: 26px;
+  margin-left: 32px;
+}
+
+.functionCardContent {
+  margin-top: 16px;
+  margin-bottom: 48px;
+  line-height: 24px;
+  margin-left: 32px;
 }
 
 header {
@@ -293,6 +357,42 @@ footer {
   color: #221E1F;
   text-align: center;
   margin: 16px 0px 48px 0px;
+}
+
+.function {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.functionCards {
+  width: 49%;
+}
+
+.functionContent {
+  width: 49%;
+}
+
+.functionContentTitle {
+  margin-top: 165px;
+  margin-bottom: 16px;
+  margin-left: 16%;
+}
+
+.functionContentContent {
+  margin-bottom: 40px;
+  margin-left: 16%;
+}
+
+.functionContentBtn {
+  margin-left: 16%;
 }
 
 .CTA {
