--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -100,3 +100,48 @@
         }
 
 }
+
+.proofCard{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 104px;
+    margin-bottom: 134px;
+
+    & li{
+        width: 32%;
+        position: relative;
+        border-radius: 12px;
+        box-shadow: 0px 2px 10px #000014;
+    }
+
+    &Img{
+        width: 80px;
+        border-radius: 50%;
+        position: absolute;
+        top: -56px;
+        left: 32px;
+        box-shadow: 0px 2px 10px #000014;
+    }
+
+    &Content{
+        margin: 48px 32px 24px 32px;
+    }
+    
+    &Company{
+        margin: 24px 0px 8px 32px;
+    }
+
+    &Name{
+        display: inline-block;
+        margin: 0px 84px 24px 32px;
+    }
+
+    &Star{
+        display: inline-block;
+        vertical-align: middle;
+    }
+
+
+
+
+}
