--- a/styles/_phone.scss
+++ b/styles/_phone.scss
@@ -1,7 +1,7 @@
-@media (max-width: 375px){
+@media (max-width: 414px){
 
     .container{
-        padding-left: 20px;
+        max-width: 375px;
     }
 
     .background{
