--- a/styles/_phone.scss
+++ b/styles/_phone.scss
@@ -1,5 +1,8 @@
 @media (max-width: 375px){
 
+    .container{
+        max-width: 90%;
+    }
 
     .background{
         display: none;
@@ -72,6 +75,49 @@
                 text-align: center;
                 color: $colorDGR;
             }
+        }
+    }
+
+
+    .proofCard{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-top: 104px;
+        margin-bottom: 134px;
+    
+        & li{
+            width: 80%;
+            position: relative;
+            border-radius: 12px;
+            box-shadow: 0px 2px 10px #000014;
+        }
+    
+        &Img{
+            width: 80px;
+            border-radius: 50%;
+            position: absolute;
+            top: -56px;
+            left: 32px;
+            box-shadow: 0px 2px 10px #000014;
+        }
+    
+        &Content{
+            margin: 48px 32px 24px 32px;
+        }
+        
+        &Company{
+            margin: 24px 0px 8px 32px;
+        }
+    
+        &Name{
+            display: inline-block;
+            margin: 0px 84px 24px 32px;
+        }
+    
+        &Star{
+            display: inline-block;
+            vertical-align: middle;
         }
     }
 }
