--- a/styles/main.css
+++ b/styles/main.css
@@ -489,6 +489,9 @@ footer {
 }
 
 @media (max-width: 375px) {
+  .container {
+    max-width: 90%;
+  }
   .background {
     display: none;
   }
@@ -544,6 +547,48 @@ footer {
     width: 95%;
     text-align: center;
     color: #747474;
+  }
+  .proofCard {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-top: 104px;
+    margin-bottom: 134px;
+  }
+  .proofCard li {
+    width: 80%;
+    position: relative;
+    border-radius: 12px;
+    -webkit-box-shadow: 0px 2px 10px #000014;
+            box-shadow: 0px 2px 10px #000014;
+  }
+  .proofCardImg {
+    width: 80px;
+    border-radius: 50%;
+    position: absolute;
+    top: -56px;
+    left: 32px;
+    -webkit-box-shadow: 0px 2px 10px #000014;
+            box-shadow: 0px 2px 10px #000014;
+  }
+  .proofCardContent {
+    margin: 48px 32px 24px 32px;
+  }
+  .proofCardCompany {
+    margin: 24px 0px 8px 32px;
+  }
+  .proofCardName {
+    display: inline-block;
+    margin: 0px 84px 24px 32px;
+  }
+  .proofCardStar {
+    display: inline-block;
+    vertical-align: middle;
   }
 }
 /*# sourceMappingURL=main.css.map */
