--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -126,6 +126,10 @@
     &Content{
         margin: 48px 32px 24px 32px;
     }
+
+    & hr{
+        width: 90%;
+    }
     
     &Company{
         margin: 24px 0px 8px 32px;
