--- a/styles/main.css
+++ b/styles/main.css
@@ -277,6 +277,10 @@ body {
   margin: 48px 32px 24px 32px;
 }
 
+.proofCard hr {
+  width: 90%;
+}
+
 .proofCardCompany {
   margin: 24px 0px 8px 32px;
 }
@@ -314,7 +318,7 @@ footer {
 
 .footerContent {
   text-align: center;
-  line-height: 56px;
+  padding: 16px 0px;
 }
 
 .fixedBtn {
@@ -366,6 +370,10 @@ footer {
 * *::before *::after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+body {
+  background-color: #FFF;
 }
 
 .background {
@@ -468,6 +476,9 @@ footer {
 
 .proof {
   margin-top: 72px;
+}
+
+.proofTitle {
   text-align: center;
 }
 
@@ -488,10 +499,15 @@ footer {
   left: 34%;
 }
 
+.CTABg {
+  width: 100%;
+}
+
+.CTABgSM {
+  display: none;
+}
+
 @media (max-width: 375px) {
-  .container {
-    max-width: 90%;
-  }
   .background {
     display: none;
   }
@@ -548,47 +564,58 @@ footer {
     text-align: center;
     color: #747474;
   }
+  .proof {
+    margin-top: 62px;
+  }
+  .proofTitle {
+    font-size: 28px;
+    line-height: 40px;
+  }
   .proofCard {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    margin-top: 104px;
-    margin-bottom: 134px;
+    margin-top: 88px;
+    margin-bottom: 94px;
   }
   .proofCard li {
-    width: 80%;
-    position: relative;
-    border-radius: 12px;
-    -webkit-box-shadow: 0px 2px 10px #000014;
-            box-shadow: 0px 2px 10px #000014;
+    width: 90%;
   }
-  .proofCardImg {
-    width: 80px;
-    border-radius: 50%;
-    position: absolute;
-    top: -56px;
-    left: 32px;
-    -webkit-box-shadow: 0px 2px 10px #000014;
-            box-shadow: 0px 2px 10px #000014;
+  .proofCard li:nth-child(n+2) {
+    display: none;
   }
   .proofCardContent {
-    margin: 48px 32px 24px 32px;
+    margin: 48px 17px 16px 16px;
   }
   .proofCardCompany {
-    margin: 24px 0px 8px 32px;
+    margin: 16px 0px 8px 16px;
   }
   .proofCardName {
-    display: inline-block;
-    margin: 0px 84px 24px 32px;
+    margin: 0px 77px 16px 16px;
   }
   .proofCardStar {
     display: inline-block;
     vertical-align: middle;
+  }
+  .CTABg {
+    display: none;
+  }
+  .CTABgSM {
+    display: block;
+    width: 100%;
+  }
+  .CTAWords {
+    font-size: 24px;
+    line-height: 35px;
+    top: 63%;
+    left: 5%;
+  }
+  .CTABtn {
+    top: 76%;
+    left: 32%;
+  }
+  .footerContent {
+    padding: 16px;
   }
 }
 /*# sourceMappingURL=main.css.map */
