--- a/styles/main.css
+++ b/styles/main.css
@@ -233,14 +233,12 @@ body {
 }
 
 .functionCardTitle {
-  line-height: 26px;
   margin-left: 32px;
 }
 
 .functionCardContent {
   margin-top: 16px;
   margin-bottom: 48px;
-  line-height: 24px;
   margin-left: 32px;
 }
 
@@ -408,10 +406,6 @@ body {
   width: 49%;
 }
 
-.bannerImgSM {
-  display: none;
-}
-
 .plantform {
   width: 100%;
   margin-top: 217px;
@@ -487,16 +481,24 @@ body {
   position: relative;
 }
 
-.CTABtn {
-  position: absolute;
-  top: 70%;
-  left: 45%;
+.CTAContent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.CTAWords {
-  position: absolute;
-  top: 51%;
-  left: 34%;
+.CTABtn {
+  margin-top: 36px;
 }
 
 .CTABg {
@@ -511,12 +513,20 @@ body {
   .background {
     display: none;
   }
+  .container {
+    padding: 0px 20px;
+  }
+  .fixedBtn {
+    top: 70%;
+    right: 16px;
+  }
   .banner {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
   }
   .bannerContent {
     width: 100%;
+    text-align: center;
   }
   .bannerContentUpTitle {
     font-size: 16px;
@@ -532,12 +542,19 @@ body {
   }
   .bannerImg {
     width: 100%;
+    background-image: url(../img/bg_home_sm.svg);
+    background-repeat: no-repeat;
+    background-size: 334px 244px;
+    background-position-y: 90px;
   }
   .bannerImgSM {
     display: inline;
   }
   .logo {
     width: 130px;
+  }
+  .plantform {
+    margin-top: 99px;
   }
   .plantformTitle {
     font-size: 28px;
@@ -564,6 +581,82 @@ body {
     text-align: center;
     color: #747474;
   }
+  .cusmers {
+    margin-top: 60px;
+  }
+  .cusmersTitle {
+    font-size: 28px;
+    line-height: 40px;
+  }
+  .cusmersContent {
+    font-size: 18px;
+    list-style: 26px;
+    margin-bottom: 32px;
+  }
+  .cusmersCard {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .cusmersCard li {
+    width: 70%;
+    margin-bottom: 24px;
+  }
+  .function {
+    margin-top: 36px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .functionCards {
+    width: 62%;
+  }
+  .functionContent {
+    width: 90%;
+    margin: 0;
+  }
+  .functionContent {
+    text-align: center;
+  }
+  .functionContentTitle {
+    margin-top: 0px;
+    margin-left: 0px;
+    font-size: 28px;
+    line-height: 40px;
+  }
+  .functionContentContent {
+    margin-bottom: 28px;
+    margin-left: 0px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .functionContentBtn {
+    margin-left: 0px;
+  }
+  .functionCard {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: 44px;
+  }
+  .functionCard li {
+    width: 100%;
+    margin-bottom: 24px;
+    margin-right: 0px;
+  }
   .proof {
     margin-top: 62px;
   }
@@ -575,6 +668,9 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-top: 88px;
     margin-bottom: 94px;
   }
@@ -607,12 +703,6 @@ body {
   .CTAWords {
     font-size: 24px;
     line-height: 35px;
-    top: 63%;
-    left: 5%;
-  }
-  .CTABtn {
-    top: 76%;
-    left: 32%;
   }
   .footerContent {
     padding: 16px;
