index rwd finished withou backeground

--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -37,6 +37,7 @@
         width: 24%;
         border-radius: 12px;
         box-shadow: 0px 2px 10px #000014;
+        background-color: #fff;
     }
 
     &Img{
@@ -69,6 +70,7 @@
         margin-right: 47px;
         border-radius: 12px;
         box-shadow: 0px 2px 10px #000014;
+        background-color: #fff;
     } 
     
     &Img{
@@ -110,6 +112,7 @@
         position: relative;
         border-radius: 12px;
         box-shadow: 0px 2px 10px #000014;
+        background-color: #fff;
     }
 
     &Img{
