--- a/styles/_phone.scss
+++ b/styles/_phone.scss
@@ -1,6 +1,6 @@
 @media (max-width: 375px){
 
-    .background{
+    .backgroundTop{
         display: none;
     }
 
@@ -58,7 +58,7 @@
 
     .plantform{
         margin-top: 99px;
-        
+
             &Title{
                 font-size: 28px;
                 line-height: 40px;
