--- a/styles/main.css
+++ b/styles/main.css
@@ -171,6 +171,7 @@ body {
   border-radius: 12px;
   -webkit-box-shadow: 0px 2px 10px #000014;
           box-shadow: 0px 2px 10px #000014;
+  background-color: #fff;
 }
 
 .cusmersCardImg {
@@ -207,6 +208,7 @@ body {
   border-radius: 12px;
   -webkit-box-shadow: 0px 2px 10px #000014;
           box-shadow: 0px 2px 10px #000014;
+  background-color: #fff;
 }
 
 .functionCardImg {
@@ -259,6 +261,7 @@ body {
   border-radius: 12px;
   -webkit-box-shadow: 0px 2px 10px #000014;
           box-shadow: 0px 2px 10px #000014;
+  background-color: #fff;
 }
 
 .proofCardImg {
@@ -374,7 +377,7 @@ body {
   background-color: #FFF;
 }
 
-.background {
+.backgroundTop {
   max-width: auto;
   position: absolute;
   top: 0;
@@ -510,7 +513,7 @@ body {
 }
 
 @media (max-width: 375px) {
-  .background {
+  .backgroundTop {
     display: none;
   }
   .container {
