--- a/styles/_phone.scss
+++ b/styles/_phone.scss
@@ -1,9 +1,5 @@
 @media (max-width: 375px){
 
-    .backgroundTop{
-        display: none;
-    }
-
     .container{
         padding: 0px 20px;
     }
@@ -11,6 +7,21 @@
     .fixedBtn{
         top: 70%;
         right: 16px;
+    }
+
+    .background{
+
+        &Top{
+            display: none;
+        }
+    
+        &Ball02{
+            width: 135px;
+            position: absolute;
+            right: 47px;
+            z-index: -1;
+        }
+    
     }
 
     .banner{
