--- a/styles/main.css
+++ b/styles/main.css
@@ -296,6 +296,34 @@ body {
   vertical-align: middle;
 }
 
+.backgroundTop {
+  max-width: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+}
+
+.backgroundBall01 {
+  position: absolute;
+  left: -280px;
+  top: -300px;
+  z-index: -1;
+}
+
+.backgroundBall02 {
+  position: absolute;
+  right: -200px;
+  bottom: -200px;
+  z-index: -1;
+}
+
+.backgroundBall03 {
+  position: absolute;
+  left: -90px;
+  z-index: -1;
+}
+
 header {
   margin: 24px 0px;
   display: -webkit-box;
@@ -377,18 +405,11 @@ body {
   background-color: #FFF;
 }
 
-.backgroundTop {
-  max-width: auto;
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: -1;
-}
-
 .container {
   max-width: 1120px;
   margin: 0 auto;
   padding: 0px 8px;
+  position: relative;
 }
 
 .banner {
@@ -412,6 +433,7 @@ body {
 .plantform {
   width: 100%;
   margin-top: 217px;
+  position: relative;
 }
 
 .plantformTitle {
@@ -422,6 +444,7 @@ body {
   width: 100%;
   margin-top: 100px;
   margin-bottom: 100px;
+  position: relative;
 }
 
 .cusmersTitle {
@@ -473,6 +496,7 @@ body {
 
 .proof {
   margin-top: 72px;
+  position: relative;
 }
 
 .proofTitle {
@@ -513,15 +537,21 @@ body {
 }
 
 @media (max-width: 375px) {
-  .backgroundTop {
-    display: none;
-  }
   .container {
     padding: 0px 20px;
   }
   .fixedBtn {
     top: 70%;
     right: 16px;
+  }
+  .backgroundTop {
+    display: none;
+  }
+  .backgroundBall02 {
+    width: 135px;
+    position: absolute;
+    right: 47px;
+    z-index: -1;
   }
   .banner {
     -ms-flex-wrap: wrap;
