--- a/styles/_background.scss
+++ b/styles/_background.scss
@@ -8,24 +8,31 @@
         z-index: -1;
 	}
 
+    &Balls{
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+
     &Ball01
     {
         position: absolute;
-        left: -280px;
-        top: -300px;
+        left: -222px;
+        top: 565px;
         z-index: -1;
     }
 
     &Ball02{
         position: absolute;
-        right: -200px;
-        bottom: -200px;
+        top: 1694px;
+        right: -100px;
         z-index: -1;
     }
 
     &Ball03{
         position: absolute;
-        left: -90px;
+        top: 2640px;
+        left: 150px;
         z-index: -1;
     }
 
