--- a/styles/_phone.scss
+++ b/styles/_phone.scss
@@ -1,5 +1,11 @@
 @media (max-width: 375px){
 
+    body{
+        background-size: 35% ,44% ,153px;
+		background-position: left -77px top 743px ,top 3067px right -47px ,top 4827px
+        left -76px;
+	}
+
     .container{
         padding: 0px 20px;
     }
