--- a/styles/main.css
+++ b/styles/main.css
@@ -304,33 +304,6 @@ body {
   z-index: -1;
 }
 
-.backgroundBalls {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-
-.backgroundBall01 {
-  position: absolute;
-  left: -222px;
-  top: 565px;
-  z-index: -1;
-}
-
-.backgroundBall02 {
-  position: absolute;
-  top: 1694px;
-  right: -100px;
-  z-index: -1;
-}
-
-.backgroundBall03 {
-  position: absolute;
-  top: 2640px;
-  left: 150px;
-  z-index: -1;
-}
-
 header {
   margin: 24px 0px;
   display: -webkit-box;
@@ -410,6 +383,9 @@ footer {
 
 body {
   background-color: #FFF;
+  background-image: url(../img/ball01.svg), url(../img/ball02.svg), url(../img/ball03.svg);
+  background-repeat: no-repeat;
+  background-position: left -222px top 565px ,top 1694px right -100px ,top 2640px left 150px;
 }
 
 .container {
@@ -544,6 +520,10 @@ body {
 }
 
 @media (max-width: 375px) {
+  body {
+    background-size: 35% ,44% ,153px;
+    background-position: left -77px top 743px ,top 3067px right -47px ,top 4827px left -76px;
+  }
   .container {
     padding: 0px 20px;
   }
