--- a/styles/_font.scss
+++ b/styles/_font.scss
@@ -2,6 +2,10 @@ body{
     font-family: 'Noto Sans TC', sans-serif;
 }
 
+.fz12{
+    font-size: 12px;
+}
+
 .fz16{
     font-size: 16px;    
 }
@@ -18,6 +22,10 @@ body{
     font-size: 24px;
 }
 
+.fz29{
+    font-size: 29px;
+}
+
 .fz32{
     font-size: 32px;
 }
@@ -30,6 +38,10 @@ body{
     font-weight: bold;
 }
 
+.lh17{
+    line-height: 17px;
+}
+
 .lh24{
     line-height: 24px;
 }
@@ -40,6 +52,14 @@ body{
 
 .lh29{
     line-height: 29px;
+}
+
+.lh35{
+    line-height: 35px;
+}
+
+.lh42{
+    line-height: 42px;
 }
 
 .lh46{
