--- a/styles/main.scss
+++ b/styles/main.scss
@@ -135,7 +135,7 @@
 }
 
 .priceBanner{
-	
+
 	background-color: #F7F9FD;
 	border-bottom-left-radius: 300px;
 
@@ -148,6 +148,78 @@
 		top: 0;
 		right: 0;
 	}
+}
+
+.plan{
+
+	text-align: center;
+
+	&Title{
+		margin-top: 100px;
+		margin-bottom: 48px;
+	}
+
+	&Btns{
+		display: flex;
+		justify-content: center;
+		margin-bottom: 60px;
+	}
+
+	&Btn{
+		margin: 0px 8px;
+	}
+
+	&Cards{
+			display: flex;
+			justify-content: center;
+	}
+
+	&Card{
+		width: 49%;
+		margin: 0px 10px;
+		border-radius: 12px;
+		background-color: #fff;
+		box-shadow: 0px 2px 10px #000014;
+
+		&Title{
+			margin-top: 10px;
+			margin-bottom: 19px;
+		}
+
+		&Content{
+			margin: 32px 0px;
+		}
+
+		&Price{
+			display: flex;
+			justify-content: center;
+			margin-bottom: 24px;
+
+			&Content{
+			width: 169px;
+			height: 108px;
+			background-color: $colorGR;
+			border-radius: 12px;
+				
+			&Title{
+					margin-top: 24px;
+					margin-bottom: 8px;
+				}
+
+				&Equal{
+					margin: 33px 17px 0px 21px;
+				}
+			
+			}
+		}
+
+		&FunciontList{
+			margin: 8px 0px;
+			text-align: left;
+		}
+
+	}
+
 }
 
 
