--- a/styles/main.css
+++ b/styles/main.css
@@ -608,8 +608,10 @@ body {
 }
 
 .planCard {
-  width: 49%;
+  width: 35%;
   margin: 0px 10px;
+  padding-bottom: 44px;
+  margin-bottom: 100px;
   border-radius: 12px;
   background-color: #fff;
   -webkit-box-shadow: 0px 2px 10px #000014;
@@ -636,7 +638,7 @@ body {
 }
 
 .planCardPriceContent {
-  width: 169px;
+  width: 38%;
   height: 108px;
   background-color: #F5F5F5;
   border-radius: 12px;
@@ -651,9 +653,23 @@ body {
   margin: 33px 17px 0px 21px;
 }
 
+.planCard ul {
+  margin-bottom: 44px;
+}
+
 .planCardFunciontList {
   margin: 8px 0px;
   text-align: left;
+}
+
+.planCardFunciontList::before {
+  content: '';
+  background: url("../img/icon_check.svg");
+  width: 19px;
+  height: 16px;
+  margin-left: 29px;
+  margin-right: 13px;
+  display: inline-block;
 }
 
 @media (max-width: 375px) {
