--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -36,7 +36,7 @@
         align-items: center;
         width: 24%;
         border-radius: 12px;
-        box-shadow: 0px 2px 10px #000014;
+        box-shadow: 0px 2px 10px #00000014;
         background-color: #fff;
     }
 
@@ -69,7 +69,7 @@
         margin-bottom: 28px;
         margin-right: 47px;
         border-radius: 12px;
-        box-shadow: 0px 2px 10px #000014;
+        box-shadow: 0px 2px 10px #00000014;
         background-color: #fff;
     } 
     
@@ -84,7 +84,7 @@
                 height: 86px;
                 background-color: #fff;
                 border-radius: 50%;
-                box-shadow: 0px 2px 10px #000014;
+                box-shadow: 0px 2px 10px #00000014;
                 margin: 32px 0px 24px 32px;
             }
         }
@@ -111,7 +111,7 @@
         width: 32%;
         position: relative;
         border-radius: 12px;
-        box-shadow: 0px 2px 10px #000014;
+        box-shadow: 0px 2px 10px #00000014;
         background-color: #fff;
     }
 
@@ -121,7 +121,7 @@
         position: absolute;
         top: -56px;
         left: 32px;
-        box-shadow: 0px 2px 10px #000014;
+        box-shadow: 0px 2px 10px #00000014;
     }
 
     &Content{
