--- a/styles/main.css
+++ b/styles/main.css
@@ -189,8 +189,8 @@ body {
           align-items: center;
   width: 24%;
   border-radius: 12px;
-  -webkit-box-shadow: 0px 2px 10px #000014;
-          box-shadow: 0px 2px 10px #000014;
+  -webkit-box-shadow: 0px 2px 10px #00000014;
+          box-shadow: 0px 2px 10px #00000014;
   background-color: #fff;
 }
 
@@ -226,8 +226,8 @@ body {
   margin-bottom: 28px;
   margin-right: 47px;
   border-radius: 12px;
-  -webkit-box-shadow: 0px 2px 10px #000014;
-          box-shadow: 0px 2px 10px #000014;
+  -webkit-box-shadow: 0px 2px 10px #00000014;
+          box-shadow: 0px 2px 10px #00000014;
   background-color: #fff;
 }
 
@@ -249,8 +249,8 @@ body {
   height: 86px;
   background-color: #fff;
   border-radius: 50%;
-  -webkit-box-shadow: 0px 2px 10px #000014;
-          box-shadow: 0px 2px 10px #000014;
+  -webkit-box-shadow: 0px 2px 10px #00000014;
+          box-shadow: 0px 2px 10px #00000014;
   margin: 32px 0px 24px 32px;
 }
 
@@ -279,8 +279,8 @@ body {
   width: 32%;
   position: relative;
   border-radius: 12px;
-  -webkit-box-shadow: 0px 2px 10px #000014;
-          box-shadow: 0px 2px 10px #000014;
+  -webkit-box-shadow: 0px 2px 10px #00000014;
+          box-shadow: 0px 2px 10px #00000014;
   background-color: #fff;
 }
 
@@ -290,8 +290,8 @@ body {
   position: absolute;
   top: -56px;
   left: 32px;
-  -webkit-box-shadow: 0px 2px 10px #000014;
-          box-shadow: 0px 2px 10px #000014;
+  -webkit-box-shadow: 0px 2px 10px #00000014;
+          box-shadow: 0px 2px 10px #00000014;
 }
 
 .proofCardContent {
@@ -614,8 +614,8 @@ body {
   margin-bottom: 100px;
   border-radius: 12px;
   background-color: #fff;
-  -webkit-box-shadow: 0px 2px 10px #000014;
-          box-shadow: 0px 2px 10px #000014;
+  -webkit-box-shadow: 0px 2px 10px #00000014;
+          box-shadow: 0px 2px 10px #00000014;
 }
 
 .planCardTitle {
@@ -670,6 +670,60 @@ body {
   margin-left: 29px;
   margin-right: 13px;
   display: inline-block;
+}
+
+.QA {
+  padding: 0 15%;
+  margin-bottom: 100px;
+}
+
+.QATitle {
+  margin-bottom: 48px;
+  text-align: center;
+}
+
+.QAList li {
+  -webkit-box-shadow: 0px 2px 10px #00000014;
+          box-shadow: 0px 2px 10px #00000014;
+  border-radius: 12px;
+}
+
+.QAListTitle {
+  padding: 16px 0px 16px 32px;
+  margin: 8px 0px;
+  position: relative;
+  cursor: pointer;
+}
+
+.QAListTitleClose::after {
+  content: '';
+  background-image: url(../img/icon_plus.svg);
+  background-repeat: no-repeat;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  position: absolute;
+  right: 32px;
+}
+
+.QAListTitleOpen::after {
+  content: '';
+  background-image: url(../img/icon_minus.svg);
+  background-repeat: no-repeat;
+  width: 20px;
+  height: 20px;
+  vertical-align: baseline;
+  display: inline-block;
+  position: absolute;
+  right: 32px;
+}
+
+.QAListContentOpen {
+  padding: 16px 0px 24px 32px;
+}
+
+.QAListContentClose {
+  display: none;
 }
 
 @media (max-width: 375px) {
