--- a/styles/main.scss
+++ b/styles/main.scss
@@ -27,7 +27,7 @@
 	position: relative;
 }
 
-
+// 首頁起
 .banner{
 	width: 100%;
 	display: flex;
@@ -133,7 +133,10 @@
 	}
 	
 }
+// 首頁終
 
+
+// 價格頁起
 .priceBanner{
 
 	background-color: #F7F9FD;
@@ -181,7 +184,7 @@
 		margin-bottom: 100px;
 		border-radius: 12px;
 		background-color: #fff;
-		box-shadow: 0px 2px 10px #000014;
+		box-shadow: 0px 2px 10px #00000014;
 
 		&Title{
 			margin-top: 10px;
@@ -232,13 +235,77 @@
 				margin-left: 29px;
 				margin-right: 13px;
 				display: inline-block;
-
 			}
 		}
 
 	}
 
 }
+
+.QA{
+
+	padding: 0 15%;
+	
+
+	margin-bottom: 100px;
+
+	&Title{
+		margin-bottom: 48px;
+		text-align: center;
+	}
+
+	&List{
+
+		& li {
+			box-shadow: 0px 2px 10px #00000014;
+			border-radius: 12px;
+		}
+
+		&Title{
+			padding: 16px 0px 16px 32px;
+			margin: 8px 0px;
+			position: relative;
+			cursor: pointer;
+
+			&Close::after{
+				content: '';
+				background-image: url(../img/icon_plus.svg);
+				background-repeat: no-repeat;
+				width: 20px;
+				height: 20px;
+				display: inline-block;
+				position: absolute;
+				right: 32px;
+			}
+
+			&Open::after{
+				content: '';
+				background-image: url(../img/icon_minus.svg);
+				background-repeat: no-repeat;
+				width: 20px;
+				height: 20px;
+				vertical-align: baseline;
+				display: inline-block;
+				position: absolute;
+				right: 32px;
+			}
+			
+		}
+
+		&Content{
+
+			&Open{
+				padding: 16px 0px 24px 32px;
+			}	
+			&Close{
+				display: none;
+			}
+			
+		}
+	}	
+}
+
+// 價格頁終
 
 
 @import "pad";
