--- a/styles/main.css
+++ b/styles/main.css
@@ -324,6 +324,17 @@ body {
   z-index: -1;
 }
 
+.backgroundPriceBanner {
+  width: 100%;
+  height: 470px;
+  background-color: #F7F9FD;
+  border-bottom-left-radius: 300px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -2;
+}
+
 header {
   margin: 24px 0px;
   display: -webkit-box;
@@ -557,11 +568,6 @@ body {
 
 .CTABgSM {
   display: none;
-}
-
-.priceBanner {
-  background-color: #F7F9FD;
-  border-bottom-left-radius: 300px;
 }
 
 .priceBannerTitle {
