--- a/styles/_card.scss
+++ b/styles/_card.scss
@@ -146,3 +146,68 @@
         vertical-align: middle;
     }
 }
+
+.plan{
+    &Card{
+		width: 35%;
+		margin: 0px 10px;
+		padding-bottom: 44px; // 因按鈕margin失效，故用另一個方向推擠
+		margin-bottom: 100px;
+		border-radius: 12px;
+		background-color: #fff;
+		box-shadow: 0px 2px 10px #00000014;
+
+		&Title{
+			margin-top: 10px;
+			margin-bottom: 19px;
+		}
+
+		&Content{
+			margin: 32px 0px;
+		}
+
+		&Price{
+			display: flex;
+			justify-content: center;
+			margin-bottom: 24px;
+
+			&Content{
+			width: 38%;
+			height: 108px;
+			background-color: $colorGR;
+			border-radius: 12px;
+				
+			&Title{
+					margin-top: 24px;
+					margin-bottom: 8px;
+				}
+
+				&Equal{
+					margin: 33px 17px 0px 21px;
+				}
+			
+			}
+		}
+
+		& ul{
+			margin-bottom: 44px;
+			// 因按鈕margin失效，故用另一個方向推擠
+		}
+
+		&FunciontList{
+			margin: 8px 0px;
+			text-align: left;
+
+			&::before{
+				content: '';
+				background: url('../img/icon_check.svg');
+				width: 19px;
+				height: 16px;
+				margin-left: 29px;
+				margin-right: 13px;
+				display: inline-block;
+			}
+		}
+
+	}
+}
